--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'jshop'
 
 include 'discovery-service'
 include 'trading-service'
+include 'api-gateway'
+include 'notification-service'
